configs/kubernetes/restaurant-microservice-sd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-microservice
spec:
  selector:
    matchLabels:
      app: restaurant-microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: restaurant-microservice
    spec:
      containers:
      - name: restaurant-microservice
        image: manjorno.azurecr.io/restaurant-microservice
        imagePullPolicy: Always
        ports:
        - containerPort: 3200

---

apiVersion: v1
kind: Service
metadata:
  name: restaurant-microservice
spec:
  selector:
    app: restaurant-microservice
  ports:
  - port: 3200
    targetPort: 3200
