configs/kubernetes/restaurant-microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-microservice-ingress
  namespace: restaurants-microservice
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/restaurants
        pathType: Prefix
        backend:
          service:
            name: manjorno-restaurants
            port:
              number: 3200
